# saleor-mcp

./: .gitignore  .test.env  Dockerfile  LICENSE  README.md  pyproject.toml  schema.graphql  uvicorn_log_config.yaml
.github/workflows/: check-licenses.yaml  publish.yml  test.yml
docs/: testing-with-claude-code.md
saleor_mcp/: __init__.py  main.py
src/: __init__.py  orders.py  server.py
src/core/: request.py
src/saleor_mcp/: __init__.py  config.py  conftest.py  ctx_utils.py  docs.py  gql_client.py  introspection.py  main.py  orders.py  policy.py  saleor_client.py  settings.py  stdio_main.py  utils.py
src/saleor_mcp/core/: models.py  request.py
src/saleor_mcp/graphql/: ChannelCreate.graphql  CountOrders.graphql  ListChannels.graphql  ListCustomers.graphql  ListOrders.graphql  ListProducts.graphql  ListShippingZones.graphql  ListStocks.graphql  ProductChannelListingUpdate.graphql  ProductCreate.graphql  ProductTypeCreate.graphql  ProductVariantChannelListingUpdate.graphql  ProductVariantCreate.graphql  ShippingZoneUpdate.graphql  WarehouseDetails.graphql
src/saleor_mcp/saleor_client/: __init__.py  async_base_client.py  channel_create.py  client.py  count_orders.py  enums.py  fragments.py  graphql_client.py  input_types.py  list_channels.py  list_customers.py  list_orders.py  list_products.py  list_shipping_zones.py  list_stocks.py  product_channel_listing_update.py  product_create.py  product_type_create.py  product_variant_channel_listing_update.py  product_variant_create.py  shipping_zone_update.py  warehouse_details.py
src/saleor_mcp/static/: index.html  script.js  styles.css
src/saleor_mcp/telemetry/: __init__.py  mcp_attributes.py  metric.py  trace.py
src/saleor_mcp/templates/: index.html.jinja
src/saleor_mcp/tests/: test_config.py  test_introspection.py  test_main.py  test_policy.py  test_saleor_client.py
src/saleor_mcp/tools/: __init__.py  channels.py  customers.py  gateway.py  mutations.py  orders.py  products.py  utils.py
src/saleor_mcp/tools/tests/: test_channels.py  test_customers.py  test_gateway.py  test_orders.py  test_products.py
